# deadlock-build-creator

./: Cargo.toml  Dockerfile
.cargo/: config.toml
docs/: index.html
docs/css/: styles.css
docs/js/: api.js  app.js  components.js
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  components.js
src/: error.rs  lib.rs
src/routes/v1/: mod.rs
src/routes/v1/analytics/: item_stats.rs  item_timing_stats.rs  item_upgrade_stats.rs  mod.rs
src/routes/v1/build_creator/: handlers.rs  mod.rs  structs.rs
src/services/assets/: client.rs  types.rs
