[package]
name = "deadlock-api-rust"
version = "0.1.0"
edition = "2024"
description = "API for Deadlock game data"
repository = "https://github.com/deadlock-api/deadlock-api-rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "http2", "zstd", "gzip", "form"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
redis = { version = "1.0.2", default-features = false, features = ["tokio-comp"] }
clickhouse = { version = "0.14.1", features = ["chrono"] }
sqlx = { version = "0.8.6", features = ["chrono", "derive", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
cached = { version = "0.56.0", features = ["async", "serde"] }
axum = "0.8.8"
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.149"
object_store = { version = "0.13.0", features = ["aws"], default-features = false }
tower = { version = "0.5.3", features = ["limit", "tokio"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-http = { version = "0.6.8", features = ["compression-full", "cors", "decompression-full", "fs", "normalize-path", "trace", "limit"] }
tracing = "0.1.44"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
axum-prometheus = "0.10.0"
itertools = "0.14.0"
futures = "0.3.31"
snap = "1.1.1"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "22f44513a4945cb1f623877d9a6e939a542cc8d5", features = ["gc-client", "serde"] }
prost = "0.14.3"
base64 = "0.22.1"
tryhard = "0.5.2"
async-compression = { version = "0.4.37", features = ["bzip2", "tokio"] }
strum = { version = "0.27.2", features = ["derive"] }
axum-extra = { version = "0.12.5", features = ["query"] }
metrics = "0.24.3"
bytes = { version = "1.11.0", features = ["serde"] }
thiserror = "2.0.17"
rand = "0.9.2"
quick-xml = { version = "0.39.0", features = ["serde", "serialize"] }
serde-env = "0.2.0"
regex = "1.12.2"
mimalloc = "0.1.48"
urlencoding = "2.1.3"

[dev-dependencies]
rstest = "0.26.1"
sqlparser = "0.60.0"
